adjusted item selection to changes in ItemSelectionDialogRunner